tests/reference/run-alloc_attr_disallow-ffd3ec5.stderr
semantic error: `parameter` attribute conflicts with `allocatable` attribute
 --> tests/./errors/alloc_attr_disallow.f90:4:4
  |
4 |    integer, allocatable, parameter :: v=1
  |    ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ 
